--- a/project/app/src/main/res/layout/fragment_f__deal_details.xml
+++ b/project/app/src/main/res/layout/fragment_f__deal_details.xml
@@ -27,7 +27,8 @@
         android:layout_below="@id/image_slider">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -51,6 +52,73 @@
                     android:text="Restaurant"
                     android:textSize="16sp"
                     android:layout_marginLeft="5dp"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Pure Milford welcome you aboard atmospheric in mageicalyou aboard atmospheric in mageical"
+                android:textColor="@color/dark_blue_text"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:textAlignment="center"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/button_outline"
+                android:layout_margin="10dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:padding="5dp"
+                    android:textAlignment="center"
+                    android:text="HIGHLIGHTS"
+                    android:background="@drawable/round_orange_bg"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"/>
+
+                <TextView
+                    style="@style/highlights_sec_text"
+                    android:id="@+id/textView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Enjoy a 1hr 45min – 2 hour cruise through ancient rainforest, towering cliffs and waterfalls." />
+
+                <TextView
+                    style="@style/highlights_sec_text"
+                    android:id="@+id/textView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Learn plenty of Fiordland facts from our famously friendly skipper and crew." />
+
+                <TextView
+                    style="@style/highlights_sec_text"
+                    android:id="@+id/textView4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Learn plenty of Fiordland facts from our famously friendly skipper and crew." />
+
+                <TextView
+                    style="@style/highlights_sec_text"
+                    android:id="@+id/textView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Free tea and coffee throughout the cruise with an onboard Cafe Bar serving hot and cold food and beverages" />
+
+                <TextView
+                    style="@style/highlights_sec_text"
+                    android:id="@+id/textView6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Free tea and coffee throughout the cruise with an onboard Cafe Bar serving hot and cold food and beverages" />
+
 
             </LinearLayout>
 
