--- a/project/app/src/main/res/values/styles.xml
+++ b/project/app/src/main/res/values/styles.xml
@@ -68,6 +68,11 @@
         <item name="android:layout_marginLeft">10dp</item>
         <item name="android:layout_marginTop">10dp</item>
     </style>
+    <style name="highlights_sec_text">
+        <item name="android:textStyle"></item>
+        <item name="android:layout_marginLeft">30dp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 
 
 </resources>
