--- a/project/app/src/main/res/layout/rv_carditems.xml
+++ b/project/app/src/main/res/layout/rv_carditems.xml
@@ -8,7 +8,8 @@
     android:elevation="20dp"
     android:layout_marginLeft="30dp"
     android:layout_marginRight="30dp"
-    android:id="@+id/rv_carditems">
+    android:id="@+id/rv_carditems"
+    android:layout_marginTop="20dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
