--- a/project/app/src/main/res/layout/activity_main.xml
+++ b/project/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
         android:layout_marginEnd="20sp"
         android:layout_marginBottom="20sp"
         android:text="Login as" />
+
     <Button
         android:id="@+id/btCustomer"
         android:layout_width="300sp"
@@ -35,10 +36,10 @@
         android:layout_below="@id/lbRegisterAs"
         android:layout_centerInParent="true"
         android:layout_marginTop="20sp"
-        android:text="Customer"
-        android:textSize="18sp"
         android:background="@drawable/button_outline"
-        android:textColor="@color/sec_color"/>
+        android:text="Customer"
+        android:textColor="@color/sec_color"
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/btSupplier"
@@ -71,7 +72,7 @@
         android:text="Don't hava an account?"
         android:layout_below="@id/btAdmin"
         android:layout_marginLeft="130dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
         />
     <TextView
         android:layout_height="wrap_content"
@@ -81,7 +82,7 @@
         android:text="Click here"
         android:layout_below="@id/btAdmin"
         android:layout_alignRight="@id/btAdmin"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
         />
 
 </RelativeLayout>
